yaml-backup/annotated-yaml/sessions/03-ingress/subsessions/06-ingress/01-message-board-ingress.yml
# API version of this Kubernetes object
apiVersion: networking.k8s.io/v1
# Type of Kubernetes resource
kind: Ingress
# Object metadata: name, namespace, labels, annotations
metadata:
  # Name of the object or container
  name: message-board-ingress
  # Namespace in which the object is created
  namespace: app-ingress
  # Annotations for non-identifying metadata
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
# Desired state of this object
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                # Name of the object or container
                name: user-service
                # Port exposed by the Service or container
                port:
                  number: 5001
          - path: /api/apps
            pathType: Prefix
            backend:
              service:
                # Name of the object or container
                name: app-service
                # Port exposed by the Service or container
                port:
                  number: 5002
          - path: /
            pathType: Prefix
            backend:
              service:
                # Name of the object or container
                name: frontend
                # Port exposed by the Service or container
                port:
                  number: 80
